# LifePredictionSystem

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  appveyor.yml  install_package.bat  install_python.ps1
doc/: README.md  使用说明.docx  文本介绍部分.docx  界面演示(1).pptx  系统框架.docx
install_script/: install_package.bat  install_python.ps1
res/: resource.qrc
res/src/: file_icon.aseprite  model_icon.aseprite  run_icon.aseprite
script/: test.py
script/CNN/: CNN.py  __init__.py  build_and_train_model.py  cnn预测.py  cnn预测.txt  data_process.py  evaluate_model_and_calculate_score.py  preprocess_data.py
script/KNN/: knn_predict_and_evaluate.py  normalize_data.py  preprocess_data.py
script/ModelSet/: __init__.py  __main__.py
script/ModelSet/CNN/: CNN.py  __init__.py  knn预测.txt  model_process.py
script/ModelSet/KNN/: KNN.py  __init__.py  model_process.py
script/ModelSet/data/: 0-40.txt  40-80.txt  80-125.txt  __init__.py  data_path.py  data_process.py  train.txt
script/data/: test.txt
script/data/KNN/: 41-80test.txt
script/数据/125六大类数据/: test125_1.csv  test125_2.csv  test125_3.csv  test125_4.csv  test125_5.csv  test125_6.csv  train125_1.csv  train125_2.csv  train125_3.csv  train125_4.csv  train125_5.csv  train125_6.csv
script/数据/三分类/: train0-40.csv  train125+.csv  train41-125.csv  随机森林40三分类周期留class_test0.csv  随机森林40三分类周期留class_test1.csv
script/数据/四分类test/: 0-40test.txt  125+test.txt  81-125test.txt
script/数据/四分类train/: 125+.txt
src/: main.cpp  src.cmake
src/core/: Application.cpp  Application.h  Debug.cpp  Debug.h  FileSystem.cpp  FileSystem.h  base.h  core.cmake  main.cpp  main.h
src/interface/: MainWidget.cpp  MainWidget.h  MainWindow.cpp  MainWindow.h  ann.cpp  ann.h  ann.ui  cnn.cpp  cnn.h  cnn.ui  interface.cmake  knn.cpp  knn.h  knn.ui  login.cpp  login.h  login.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.cpp  model.h  model.ui  resource.qrc  system.cpp  system.h  system.ui
src/interface/page/: ModelSelectPage.cpp  ModelSelectPage.h  WelcomePage.cpp  WelcomePage.h  ePage.h  pages.h
src/interface/subWindow/: CNN.cpp  CNN.h  KNN.cpp  KNN.h
src/interface/widget/: ButtonExecutor.cpp  ButtonExecutor.h  ButtonFileDialogue.cpp  ButtonFileDialogue.h  DefaultChartWidget.cpp  DefaultChartWidget.h  GeneralModelView.cpp  GeneralModelView.h  TextField.cpp  TextField.h  widget.cmake
src/interface/window/: window.cmake
src/interface/window/mainWindow/: MainWindow.cpp  MainWindow.h
src/interface/window/test/window1/: Window1.cpp  Window1.h  Window1.ui
src/interface/worker/: WorkerThread.cpp  WorkerThread.h
src/model/: ModelResult.h
src/model/cnn/: CNNParser.cpp  CNNParser.h  CNNResult.h
src/model/knn/: KNNParser.cpp  KNNParser.h  KNNResult.h
src/python/: Py.cpp  Py.h  PyCore.cpp  PyCore.h  PyTask.h  PyWorker.cpp  PyWorker.h  python.cmake
